package RemoteWithSlotsUndoAndParty.command.stereo;

import RemoteWithSlotsUndoAndParty.command.Command;
import RemoteWithSlotsUndoAndParty.receiver.Stereo;

public class StereoOnCommand implements Command {
    Stereo stereo;

    public StereoOnCommand(Stereo stereo) {
        this.stereo = stereo;
    }

    public void execute() {
        stereo.on();
    }

    public void undo() {
        stereo.off();
    }
}
