package RemoteWithSlotsUndoAndParty.command;

public interface Command {
    void execute();

    void undo();
}
