' Generated by UML Generator
' Encoded: hLR1SjCm4BtxAtHq1jpXx0FJ4WvqffGE2Uc1uQ3QIkp1NcNaLGOexRSZMOuioKwe3QSuks_tFJrhTtpP81KewofglfUmfuBM9AjeqrmXYl918hlEEApANuoyYOeoPoGhHLQnA6fHv3EhER8RJdCco6D4oAj7rH7Bx8dKj8IOYbsJafNg1RkltnOfEV0oZvxyyYK75BowBx7u0Zc_WlnEYVhPzdlciEHrJI5NVRgdDhpTZiQbQj3zTUD9ehMTfOiN6j8mxAhYfkAOaXBmDR4YR4yLimfiy7W-rOV3Eud8uPusTx8fcDFEHMstBu7fGuKu9utS6AnZvgbtUBqnDbOyKw-5WqKSFLbluZ2tC0U8VQ7kN-NIDUmbBWiAmAeWjU6Lh5byQ7-yirXPD-MkmByeQp5JnLc63nnHFfoaU4PMxvcWA8MHQ6bDuJnJrdtJE2Hma7g6P4MH3MMla0d6JyjsJBMAJSqynSltqr_UHvg9uv0PfTd8A1fjBZOUmDHAq23sWsNISQExygVS-MGdpx0tRJJjie4jFJZsSREOOG8n_1klSfw9BSqOyJY7bS_ZYiqz3hqgscZQPODBxtZbuwPvrJM32SJmFtZNcu0J3waAEgkkvp6foVq3DuS4lODp66wziNfvNRigWyDNEfQQbBzJUnTSp686Os376ShUbpcSvxyJU9BOlNCUcIHlBTBROXSNlqzatEQ3zUEL3RAQhLiDuVeOAuIHki4GUuM3hAxi1YmSmh526AbpXyYhSHCQh-wzDn0Xs5UbqBVZRWTtzrnEDpANAxn-8rK-locxP92hZzq_
' URL: http://www.plantuml.com/plantuml/uml/hLR1SjCm4BtxAtHq1jpXx0FJ4WvqffGE2Uc1uQ3QIkp1NcNaLGOexRSZMOuioKwe3QSuks_tFJrhTtpP81KewofglfUmfuBM9AjeqrmXYl918hlEEApANuoyYOeoPoGhHLQnA6fHv3EhER8RJdCco6D4oAj7rH7Bx8dKj8IOYbsJafNg1RkltnOfEV0oZvxyyYK75BowBx7u0Zc_WlnEYVhPzdlciEHrJI5NVRgdDhpTZiQbQj3zTUD9ehMTfOiN6j8mxAhYfkAOaXBmDR4YR4yLimfiy7W-rOV3Eud8uPusTx8fcDFEHMstBu7fGuKu9utS6AnZvgbtUBqnDbOyKw-5WqKSFLbluZ2tC0U8VQ7kN-NIDUmbBWiAmAeWjU6Lh5byQ7-yirXPD-MkmByeQp5JnLc63nnHFfoaU4PMxvcWA8MHQ6bDuJnJrdtJE2Hma7g6P4MH3MMla0d6JyjsJBMAJSqynSltqr_UHvg9uv0PfTd8A1fjBZOUmDHAq23sWsNISQExygVS-MGdpx0tRJJjie4jFJZsSREOOG8n_1klSfw9BSqOyJY7bS_ZYiqz3hqgscZQPODBxtZbuwPvrJM32SJmFtZNcu0J3waAEgkkvp6foVq3DuS4lODp66wziNfvNRigWyDNEfQQbBzJUnTSp686Os376ShUbpcSvxyJU9BOlNCUcIHlBTBROXSNlqzatEQ3zUEL3RAQhLiDuVeOAuIHki4GUuM3hAxi1YmSmh526AbpXyYhSHCQh-wzDn0Xs5UbqBVZRWTtzrnEDpANAxn-8rK-locxP92hZzq_
' Generated on: 2025-12-10T00:53:36.195132

@startuml
skinparam classAttributeIconSize 0
hide circle

class RemoteLoader {
  +{static} main(args: String[]): void
}

class RemoteControlWithUndoAndParty {
  ~onCommands: Command
  ~offCommands: Command
  ~undoCommand: Command
  --
  +RemoteControlWithUndoAndParty()
  +setCommand(slot: int, onCommand: Command, offCommand: Command): void
  +onButtonWasPushed(slot: int): void
  +offButtonWasPushed(slot: int): void
  +undoButtonWasPushed(): void
  +toString(): String
}

class TV {
  ~location: String
  --
  +TV(location: String)
  +on(): void
  +off(): void
  +setInputChannel(): void
  +setVolume(volume: int): void
}

class Light {
  ~location: String
  --
  +Light(location: String)
  +on(): void
  +off(): void
}

class Hottub {
  ~location: String
  ~temperature: int
  --
  +Hottub(location: String)
  +on(): void
  +off(): void
  +setTemperature(temperature: int): void
  +circulate(): void
}

class Stereo {
  ~location: String
  ~volume: int
  --
  +Stereo(location: String)
  +on(): void
  +off(): void
  +setCD(): void
  +setVolume(volume: int): void
}

class MacroCommand {
  ~commands: Command
  --
  +MacroCommand(commands: Command[])
  +execute(): void
  +undo(): void
}

class StereoOffCommand {
  ~stereo: Stereo
  --
  +StereoOffCommand(stereo: Stereo)
  +execute(): void
  +undo(): void
}

class StereoOnCommand {
  ~stereo: Stereo
  --
  +StereoOnCommand(stereo: Stereo)
  +execute(): void
  +undo(): void
}

interface Command {
  ~execute(): void
  ~undo(): void
}

class HottubOffCommand {
  ~hottub: Hottub
  --
  +HottubOffCommand(hottub: Hottub)
  +execute(): void
  +undo(): void
}

class HottubOnCommand {
  ~hottub: Hottub
  --
  +HottubOnCommand(hottub: Hottub)
  +execute(): void
  +undo(): void
}

class TVOnCommand {
  ~tv: TV
  --
  +TVOnCommand(tv: TV)
  +execute(): void
  +undo(): void
}

class TVOffCommand {
  ~tv: TV
  --
  +TVOffCommand(tv: TV)
  +execute(): void
  +undo(): void
}

class NoCommand {
  +execute(): void
  +undo(): void
}

class LightOnCommand {
  ~light: Light
  --
  +LightOnCommand(light: Light)
  +execute(): void
  +undo(): void
}

class LightOffCommand {
  ~light: Light
  --
  +LightOffCommand(light: Light)
  +execute(): void
  +undo(): void
}

RemoteControlWithUndoAndParty o-- Command
RemoteControlWithUndoAndParty --> Command
MacroCommand ..|> Command
MacroCommand o-- Command
StereoOffCommand ..|> Command
StereoOffCommand --> Stereo
StereoOnCommand ..|> Command
StereoOnCommand --> Stereo
HottubOffCommand ..|> Command
HottubOffCommand --> Hottub
HottubOnCommand ..|> Command
HottubOnCommand --> Hottub
TVOnCommand ..|> Command
TVOnCommand --> TV
TVOffCommand ..|> Command
TVOffCommand --> TV
NoCommand ..|> Command
LightOnCommand ..|> Command
LightOnCommand --> Light
LightOffCommand ..|> Command
LightOffCommand --> Light
@enduml